--- a/expanding-cards/style.css
+++ b/expanding-cards/style.css
@@ -8,15 +8,16 @@
   max-height: 100dvh;
   margin: auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
 }
 
 .panel {
-  background-image: url("https://picsum.photos/1350/900?category=nature");
   background-size: auto 100%;
   background-position: center;
+  background-size: cover;
   background-repeat: no-repeat;
   height: 80vh;
   border-radius: 3.15rem;
@@ -24,7 +25,7 @@
   cursor: pointer;
   flex: 1;
   position: relative;
-  transition: all 1s ease-in-out;
+  transition: all 0.3s ease-in-out;
   overflow: hidden;
 }
 
@@ -47,7 +48,7 @@
   opacity: 0;
 }
 .active {
-  flex: 3;  
+  flex: 2;
 }
 
 .active .title {
@@ -68,4 +69,13 @@
 }
 .panel:nth-child(5) {
   background-image: url("https://picsum.photos/1350/900?category=animals");
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .panel {
+    width: 100%;
+  }
 }
